Add IAM authentication for MSK (#56)